--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "food-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Spurthi-Gudelli.github.io/cookify",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
@@ -24,9 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
